@@ -15,23 +15,24 @@
 ## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {@var{X} =} bitset (@var{a},@var{n})
-## @deftypefnx {Function File} {@var{X} =} bitset (@var{a},@var{n},@var{v})
-## sets or resets bit(s) @var{N} of unsigned integers in @var{A}.
+## @deftypefn {Function File} {@var{x} =} bitset (@var{a}, @var{n})
+## @deftypefnx {Function File} {@var{x} =} bitset (@var{a}, @var{n}, @var{v})
+## Set or reset bit(s) @var{n} of unsigned integers in @var{a}.
 ## @var{v} = 0 resets and @var{v} = 1 sets the bits.
 ## The lowest significant bit is: @var{n} = 1
 ##
 ## @example
-## dec2bin (bitset(10,1))
+## dec2bin (bitset (10, 1))
 ## @result{} 1011
 ## @end example
 ##
-## @seealso{bitand,bitor,bitxor,bitget,bitcmp,bitshift,bitmax}
+## @seealso{bitand, bitor, bitxor, bitget, bitcmp, bitshift, bitmax}
 ## @end deftypefn
 
 ## Liberally based of the version by Kai Habel from octave-forge
 
 function X = bitset (A, n, value)
+
   if (nargin < 2 || nargin > 3)
     usage ("bitset (A, n, v)");
   endif
@@ -40,21 +41,21 @@ function X = bitset (A, n, value)
     value = 1;
   endif
   
-  cname = class(A);
+  cname = class (A);
   if (strcmp (cname, "double"))
     Bmax = bitmax;
     Amax = log2 (Bmax) + 1;
-  elseif strcmp("uint",substr(cname,1,4))
-    Bmax = intmax(cname);
-    Amax = eval([cname, " (log2 (double (intmax (cname))) + 1);"]);
+  elseif strcmp("uint", substr (cname, 1, 4))
+    Bmax = intmax (cname);
+    Amax = eval ([cname, " (log2 (double (intmax (cname))) + 1);"]);
   else
-    Bmax = eval([cname, " (-1);"]);
-    Amax = eval([cname, " (log2 (double (intmax (cname))) + 2);"]);
+    Bmax = eval ([cname, " (-1);"]);
+    Amax = eval ([cname, " (log2 (double (intmax (cname))) + 2);"]);
   endif
 
-  Aone = eval([ cname, "(1);"]);
-  m = eval([cname, " (n(:));"]);
-  if (any(m < Aone) || any( m > Amax))
+  Aone = eval ([ cname, "(1);"]);
+  m = eval ([cname, " (n(:));"]);
+  if (any (m < Aone) || any (m > Amax))
     error ("n must be in the range [1,%d]", Amax);
   endif
 
